# zenn.dev

./: .gitignore  Makefile  README.md  article.mk  book.mk  dependency.mk  jest.config.js  package-lock.json  package.json  test.mk
.github/workflows/: test.yaml
articles/: denatechcon-2023.md  fugafugafuga.md  gnu-make-export-and-environment-variable.md  gnu-make-personal-recommendations-for-rule-naming.md  hogehogehoge.md  poetry-local-installation.md
articles/poetry-local-installation/: Dockerfile  Makefile  docker.mk  pyproject.toml
books/fugafugafuga/: config.yaml
books/hogehogehoge/: config.yaml
test/: validate.test.ts
test/zenn-model/lib/: index.d.ts
