[tool.poetry]
name = "poetry-local-installation"
version = "0.1.0"
description = ""
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_local_installation"}]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
